# r2k9

./: LICENSE  NOTES.md  README.md
docker/: Dockerfile  entrypoint.sh
r2k9ui/: .gitignore  README.md  pubspec.yaml
r2k9ui/android/app/: build.gradle.kts
r2k9ui/ios/Runner/: Info.plist
r2k9ui/ios/Runner.xcodeproj/: project.pbxproj
r2k9ui/lib/: main.dart
r2k9ui/linux/runner/: my_application.cc
r2k9ui/macos/Runner.xcodeproj/: project.pbxproj
r2k9ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
r2k9ui/macos/Runner/Configs/: AppInfo.xcconfig
r2k9ui/test/: widget_test.dart
r2k9ui/web/: index.html  manifest.json
r2k9ui/windows/runner/: main.cpp
ros/: .gitignore  clean
ros/src/r2k9_robot/: package.xml  setup.cfg  setup.py
ros/src/r2k9_robot/r2k9_robot/: dpad_logger_node.py  kobuki_controller_node.py  object_immobility_monitor.py  robot_vision_node.py
ui/: pubspec.yaml
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/kotlin/com/example/r2k9ui/: MainActivity.kt
ui/lib/: main.dart
ui/linux/: CMakeLists.txt
ui/windows/: CMakeLists.txt
ui/windows/runner/: Runner.rc
